# kernel

./: .bintray_descriptor.json  .clang_complete  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.in  README.md  aarch64-unknown-hermit-kernel.json  bors.toml  build.rs  clippy.toml  config.rs.in  configure  configure.ac  crates.js  deny.toml  fc-config.json  help.html  index.html  rust-toolchain  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js  test.sh  tests.sh  typos.toml  x86_64-unknown-hermit-kernel.json
arch/x86/: CMakeLists.txt
arch/x86/include/asm/: apic.h  atomic.h  atomic32.h  atomic64.h  gdt.h  idt.h  irqflags.h  isrs.h  multiboot.h  page.h  pci.h  processor.h  stddef.h  string.h  tasks.h  tasks_types.h  time.h  tss.h  uart.h  uhyve.h  vga.h
arch/x86/kernel/: Makefile  apic.c  entry.asm  gdt.c  idt.c  irq.c  isrs.c  pci.c  processor.c  signal.c  tasks.c  timer.c  uart.c
arch/x86/libkern/: Makefile  string.asm
arch/x86/loader/: CMakeLists.txt  Makefile  entry.asm  main.c  page.c  stdio.c  strstr.c  strtol.c  uart.c  vga.c
arch/x86/loader/include/: ctype.h  io.h  limits.h  page.h  stddef.h  string.h  uart.h  vga.h
arch/x86/mm/: Makefile  memory.c  page.c  vma.c
hermit-builtins/: Cargo.toml  exports
hermit-builtins/src/: alloc_impl.rs  lib.rs  math.rs
hermit-builtins/src/masos/: alloc.rs  mod.rs
hermit-builtins/src/masos/arch/: aarch64.rs  mod.rs  x86_64.rs
hermit-macro/: Cargo.toml
hermit-macro/src/: lib.rs  system.rs
include/hermit/: CMakeLists.txt  config.asm.in  config.h  config.h.in  ctype.h  dequeue.h  errno.h  logging.h  mailbox.h  mailbox_types.h  malloc.h  memory.h  processor.h  semaphore.h  spinlock.h  spinlock_types.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  syscall.h  tasks.h  tasks_types.h  time.h  virtio_config.h  virtio_ids.h  virtio_net.h  virtio_pci.h  virtio_ring.h  virtio_types.h  vma.h
include/hermit/aarch64/: arch_io.h  arch_limits.h  arch_stddef.h
include/hermit/x86_64/: arch_io.h  arch_stddef.h
librs/: CMakeLists.txt  Cargo.toml  Makefile  Xargo.toml  config.rs.in  x86_64-hermit.json
librs/examples/: Makefile
librs/examples/src/: main.rs
librs/src/: console.rs  consts.rs  dummies.rs  environment.rs  errno.rs  lib.rs  logging.rs  macros.rs  runtime_glue.rs  syscall.rs  tasks.rs  timer.rs  utils.rs
librs/src/arch/: mod.rs
librs/src/arch/aarch64/: CMakeLists.txt  entry.S  gic.rs  irq.rs  mod.rs  percore.rs  scheduler.rs  serial.rs  stubs.rs
librs/src/arch/x86_64/: CMakeLists.txt  acpi.rs  apic.rs  entry.asm  gdt.rs  idt.rs  irq.rs  isr.rs  mod.rs  pci.rs  percore.rs  pic.rs  pit.rs  processor.rs  scheduler.rs  serial.rs  switch.asm  systemtime.rs  task.rs  vga.rs
librs/src/collections/: doublylinkedlist.rs  freelist.rs  mod.rs
librs/src/drivers/: mod.rs
librs/src/drivers/net/: e1000.rs  lwip.rs  mod.rs  rtl8139.rs  uhyve.rs
librs/src/mm/: allocator.rs  freelist.rs  hole.rs  mmlock.rs  mod.rs  nodepool.rs  vma.rs
librs/src/posix/: mod.rs  system.rs  tasks.rs
librs/src/scheduler/: mod.rs  task.rs
librs/src/synch/: mod.rs  recmutex.rs  semaphore.rs  spinlock.rs
librs/src/syscalls/: io.rs  lwip.rs  mod.rs  processor.rs  proxy.rs  random.rs  rcce.rs  semaphore.rs  syscalls.rs  tasks.rs  timer.rs  uhyve.rs
librs/src/syscalls/interfaces/: generic.rs  mod.rs  proxy.rs  uhyve.rs
loader/: CMakeLists.txt  Cargo.toml  Makefile  Xargo.toml  build.rs  x86_64-hermit.json  x86_64-unknown-hermit-loader.json
loader/.cargo/: config
loader/src/: console.rs  elf.rs  entry.asm  lib.rs  link.ld  macros.rs  main.rs  paging.rs  physicalmem.rs  runtime_glue.rs  serial.rs
loader/src/arch/: mod.rs
loader/src/arch/aarch64/: entry.S  link.ld  mod.rs  paging.rs  processor.rs  (+1 more)
proxy/: CMakeLists.txt  proxy.c  proxy.h  uhyve-aarch64.c  uhyve-net.h  uhyve-x86_64.c  uhyve.c  uhyve.h  utils.c  utils.h
tests/: Cargo.toml  Makefile  basic_math.rs  basic_mem.rs  basic_print.rs  hermit_test_runner.py  measure_startup_time.rs  thread.rs
tests/.cargo/: config
tests/common/: mod.rs
tests/src/: main.rs
tests/src/tests/: mod.rs
tools/: CMakeLists.txt  Makefile  Makefile.in  demo_kvm.sh  demo_omp.sh  hermit_ircce.json  hermit_openmp.json  init.sh  proxy.c  proxy.h  uhyve-cpu.h  uhyve-net.c  uhyve-net.h  uhyve-syscalls.h  uhyve-x86_64.c  uhyve.c  uhyve.h
usr/benchmarks/: CMakeLists.txt  RCCE_pingping.c  RCCE_pingpong.c  basic.c  hist.c  hist.h  init.c  netio.c  rdtsc.c  setup.h  stream.c  taskswitch.c
usr/ircce/: CMakeLists.txt  Makefile  Makefile.in  RCCE_admin.c  RCCE_comm.c  RCCE_flags.c  RCCE_qsort.c  RCCE_recv.c  iRCCE.h  iRCCE_admin.c  iRCCE_get.c  iRCCE_irecv.c  iRCCE_isend.c  iRCCE_lib.h  iRCCE_mcast.c  iRCCE_put.c  iRCCE_srecv.c  iRCCE_ssend.c  rte_memcpy.h
usr/openmpbench/: .gitignore  CMakeLists.txt  Licence.txt  Makefile.defs.hector.cray  Makefile.defs.hector.pgi  Makefile.defs.magny0.gnu  arraybench.h  common.c  common.h  schedbench.h  syncbench.c  taskbench.c  taskbench.h
usr/tests/: CMakeLists.txt  Makefile  RCCE_minimum.c  hello++.cpp  hello.c  hellof.f90  jacobi.c  nweb23.c  pi.go  server.go  signals.c  test-malloc-mt.c  test-malloc.c
usr/xray/: CMakeLists.txt  Makefile  Makefile.in  README.md  demangle.c  parsesymbols.c  report.c  symtable.c  xray.h
usr/xray/tools/: conv2kcg.py
virtio-def/: Cargo.toml
virtio-def/src/: features.rs  lib.rs  num.rs  pci.rs
virtio-spec/: Cargo.toml  rustfmt.toml
virtio-spec/src/: bitflags.rs  driver_notifications.rs  features.rs  fs.rs  lib.rs  mmio.rs  net.rs  num.rs  pci.rs  pvirtq.rs  virtq.rs  volatile.rs  vsock.rs
virtio-spec/src/virtq/: alloc.rs  mod.rs
xtask/: Cargo.toml  hermit-ifup
xtask/src/: arch.rs  archive.rs  artifact.rs  binutil.rs  build.rs  cargo_build.rs  clippy.rs  doc.rs  flags.rs  hypervisor.rs  main.rs  rustc.rs
xtask/src/ci/: build.rs  c.rs  firecracker.rs  firecracker_vm_config.json  mod.rs  qemu.rs  rftrace.snap  rs.rs  uhyve.rs
(+24945 files in other folders)
