[package]
name = "hermit-kernel"
version = "0.12.0"
authors = ["The Hermit Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["unikernel", "libos"]
categories = ["os"]
repository = "https://github.com/hermit-os/kernel"
documentation = "https://hermit-os.github.io/kernel/hermit/"
edition = "2024"
description = "A Rust-based library operating system"
exclude = [
	"/.github/*",
	"/.vscode/*",
	"/img/*",
	".gitattributes",
	".gitignore",
]

[lib]
name = "hermit"

[[test]]
name = "basic_math"
harness = true

[[test]]
name = "basic_print"
harness = false

[[test]]
name = "measure_startup_time"
harness = false

[features]
default = ["kernel-stack", "pci", "pci-ids", "acpi", "fsgsbase", "smp", "tcp", "dhcpv4", "virtio-fs", "virtio-net", "virtio-vsock"]
acpi = []
alloc-stats = ["talc/counters"]
common-os = []
dhcpv4 = ["net", "smoltcp", "smoltcp/proto-dhcpv4", "smoltcp/socket-dhcpv4"]
dns = ["net", "smoltcp", "smoltcp/socket-dns"]
fs = ["virtio-fs"]
fsgsbase = []
gem-net = ["net", "dep:tock-registers"]
idle-poll = []
kernel-stack = []
net = []
mman = []
mmap = ["mman"] # Deprecated in favor of mman
newlib = []
nostd = []
pci = ["virtio?/pci"]
rtl8139 = ["net", "pci", "volatile/derive", "endian-num"]
semihosting = ["dep:semihosting"]
shell = ["simple-shell"]
smp = []
strace = []
tcp = ["net", "smoltcp", "smoltcp/socket-tcp"]
trace = ["smoltcp?/log", "smoltcp?/verbose"]
udp = ["net", "smoltcp", "smoltcp/socket-udp"]
vga = []
virtio = ["dep:virtio", "dep:mem-barrier"]
virtio-console = ["virtio"]
virtio-fs = ["virtio", "dep:fuse-abi", "fuse-abi/num_enum"]
virtio-net = ["net", "virtio"]
virtio-vsock = ["virtio", "pci"]
warn-prebuilt = []

# Deprecated
console = ["virtio-console"]
fuse = ["virtio-fs"]
vsock = ["virtio-vsock"]

[lints.rust]
rust_2018_idioms = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(careful)'] }
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_assert = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
semicolon_if_nothing_returned = "warn"
separated_literal_suffix = "warn"
transmute_ptr_to_ptr = "warn"
uninlined_format_args = "warn"
unreadable_literal = "warn"

[dependencies]
hermit-macro = { version = "=0.1.0", path = "hermit-macro" }
virtio = { package = "virtio-spec", version = "0.3", optional = true, features = ["alloc", "mmio", "nightly", "zerocopy"] }
ahash = { version = "0.8", default-features = false }
align-address = "0.3"
anstyle = { version = "1", default-features = false }
async-executor = { git = "https://github.com/hermit-os/async-executor.git", branch = "no_std", default-features = false, features = ["static"] }
async-lock = { version = "3.4.2", default-features = false }
async-trait = "0.1.89"
bit_field = "0.10"
bitflags = "2"
build-time = "0.1.3"
cfg-if = "1"
crossbeam-utils = { version = "0.8", default-features = false }
embedded-io = { version = "0.7", features = ["alloc"] }
endian-num = { version = "0.2", optional = true, features = ["linux-types"] }
enum_dispatch = "0.3"
fdt = { version = "0.1", features = ["pretty-printing"] }
free-list = "0.3"
fuse-abi = { version = "0.2", features = ["linux"], optional = true }
hashbrown = { version = "0.16", default-features = false }
heapless = "0.9"
hermit-entry = { version = "0.10.6", features = ["kernel"] }
hermit-sync = "0.1"
lock_api = "0.4"
log = { version = "0.4", default-features = false }
mem-barrier = { version = "0.1.0", features = ["nightly"], optional = true }
num_enum = { version = "0.7", default-features = false }
pci-ids = { version = "0.2", optional = true }
pci_types = { version = "0.10" }
rand_chacha = { version = "0.9", default-features = false }
shell-words = { version = "1.1", default-features = false }
simple-shell = { version = "0.0.1", optional = true }
smallvec = { version = "1", features = ["const_new"] }
take-static = "0.1"
talc = { version = "4" }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false }
volatile = "0.6"
zerocopy = { version = "0.8", default-features = false }
uhyve-interface = "0.1.4"

[dependencies.smoltcp]
version = "0.12"
optional = true
default-features = false
features = [
	"alloc",
	"async",
	"medium-ethernet",
	"proto-ipv4",
	"proto-ipv6",
	# Enable IP fragmentation
	"proto-ipv4-fragmentation",
	"proto-ipv6-fragmentation",
	#
	# Assume a MTU size of 9000
	#"fragmentation-buffer-size-8192",
	#"reassembly-buffer-size-8192",
]

[target.'cfg(target_arch = "x86_64")'.dependencies]
free-list = { version = "0.3", features = ["x86_64"] }
raw-cpuid = "11"
uart_16550 = "0.4"
x86_64 = "0.15"
memory_addresses = { version = "0.2.3", default-features = false, features = [
	"x86_64",
	"conv-x86_64",
] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11"
arm-gic = { version = "0.6" }
arm-pl011-uart = { version = "0.4", default-features = false }
semihosting = { version = "0.1", optional = true }
memory_addresses = { version = "0.2.3", default-features = false, features = [
	"aarch64",
] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.16"
sbi-rt = "0.0.3"
semihosting = { version = "0.1", optional = true }
tock-registers = { version = "0.10", optional = true }
trapframe = "0.10"
memory_addresses = { version = "0.2.3", default-features = false, features = [
	"riscv64",
] }

[dev-dependencies]
float-cmp = "0.10"
num-traits = { version = "0.2", default-features = false }

[build-dependencies]
anyhow = "1"
built = { version = "0.8", features = ["git2", "chrono"] }
llvm-tools = "0.1"

[workspace]
members = [
	"hermit-macro",
	"xtask",
]
exclude = [
	"hermit-builtins",
]

[patch.crates-io]
# FIXME: remove once merged: https://github.com/rcore-os/trapframe-rs/pull/16
trapframe = { git = "https://github.com/hermit-os/trapframe-rs", branch = "global_asm" }
safe-mmio = { git = "https://github.com/hermit-os/safe-mmio", branch = "be" }
x86_64 ={ path = "../../x86_64" }

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
