[package]
name = "hermit-kernel"
version = "0.13.0"
authors = ["The Hermit Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["unikernel", "libos"]
categories = ["os"]
repository = "https://github.com/hermit-os/kernel"
documentation = "https://hermit-os.github.io/kernel/hermit/"
edition = "2024"
description = "A Rust-based library operating system"
