[package]
name = "hermit-builtins"
edition = "2024"

[dependencies]
libm = "0.2"

#! ## MASOS dependencies
libc = { package = "hermit-abi", version = "0.5", optional = true }
spinning_top = { version = "0.3", optional = true }
talc = { version = "5", default-features = false, optional = true }

[lib]
crate-type = ["staticlib"]
harness = false

[features]
default = []
masos = ["dep:libc", "dep:spinning_top", "dep:talc"]

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "dist"
debug = "line-tables-only"

[workspace]
