[package]
name = "hermit-macro"
version = "0.1.0"
authors = ["Martin Kröning <martin.kroening@eonerc.rwth-aachen.de>"]
edition = "2024"
description = "Proc macro implementation to defined system calls"
repository = "https://github.com/hermit-os/kernel"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
